--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/yup": "^0.29.13",
     "reactotron-react-native": "^5.0.0",
     "typescript": "~4.3.5"
   },
