--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
+    "react-native-tinymce": "^0.1.2",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
@@ -47,6 +48,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/yup": "^0.29.13",
+    "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "^5.0.0",
     "typescript": "~4.3.5"
   },
