--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.11.2",
@@ -47,6 +48,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/yup": "^0.29.13",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "^5.0.0",
