--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.1.4",
+    "hash.js": "^1.1.7",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^16.0.1",
     "react-dom": "17.0.1",
@@ -35,6 +37,7 @@
     "react-native-paper": "^4.11.2",
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-reanimated": "~2.3.1",
+    "react-native-recaptcha-that-works": "^1.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
