--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.11.2",
     "react-native-pell-rich-editor": "^1.8.8",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.3.1",
     "react-native-recaptcha-that-works": "^1.2.0",
     "react-native-safe-area-context": "3.3.2",
