--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.5.1",
     "@wxik/core": "^0.5.5",
     "axios": "^0.25.0",
+    "email-validator": "^2.0.4",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
