--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@expo-google-fonts/open-sans": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/drawer": "^5.2.0",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "@sinclair/typebox": "^0.23.5",
     "@wxik/core": "^0.5.5",
+    "ajv": "^8.11.0",
+    "ajv-formats": "^2.1.1",
     "axios": "^0.25.0",
     "email-validator": "^2.0.4",
     "expo": "~44.0.0",
@@ -39,7 +43,6 @@
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.11.2",
     "react-native-pell-rich-editor": "^1.8.8",
-    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.3.1",
     "react-native-recaptcha-that-works": "^1.2.0",
     "react-native-safe-area-context": "3.3.2",
