--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^16.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-autoheight-webview": "^1.6.1",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-modal": "^13.0.0",
