--- a/package.json
+++ b/package.json
@@ -13,58 +13,59 @@
   },
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.2",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@metahkg/api": "^5.1.3",
+    "@react-native-async-storage/async-storage": "~1.17.10",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-picker/picker": "^2.4.1",
-    "@react-navigation/bottom-tabs": "^5.5.2",
-    "@react-navigation/drawer": "^5.2.0",
-    "@react-navigation/native": "^5.5.1",
-    "@react-navigation/stack": "^5.5.1",
-    "@sinclair/typebox": "^0.23.5",
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.3",
+    "@sinclair/typebox": "^0.25.1",
     "@wxik/core": "^0.5.5",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
-    "axios": "^0.25.0",
+    "axios": "^1.1.3",
     "email-validator": "^2.0.4",
-    "expo": "~44.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-font": "~10.0.4",
-    "expo-linear-gradient": "~11.0.0",
-    "expo-status-bar": "~1.2.0",
+    "expo": "~46.0.16",
+    "expo-app-loading": "~2.1.0",
+    "expo-font": "~10.2.1",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-status-bar": "~1.4.0",
     "formik": "^2.1.4",
     "hash.js": "^1.1.7",
     "jwt-decode": "^3.1.2",
-    "moment": "^2.29.1",
-    "react": "^16.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-autoheight-webview": "^1.6.1",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.70.4",
+    "react-native-autoheight-webview": "^1.6.5",
     "react-native-dotenv": "^3.3.1",
     "react-native-emoji-selector": "^0.2.0",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-modal": "^13.0.0",
-    "react-native-paper": "^4.11.2",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^4.12.5",
     "react-native-pell-rich-editor": "^1.8.8",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-recaptcha-that-works": "^1.2.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-tinymce": "^0.1.2",
-    "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0",
-    "yup": "^0.29.1"
+    "react-native-reanimated": "~2.12.0",
+    "react-native-recaptcha-that-works": "^1.3.2",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.2",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.18.9",
+    "react-native-webview": "11.23.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "@types/react-native-vector-icons": "^6.4.10",
-    "@types/yup": "^0.29.13",
-    "reactotron-react-js": "^3.3.7",
-    "reactotron-react-native": "^5.0.0",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.19.6",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "@types/react-native-vector-icons": "^6.4.12",
+    "@types/yup": "^0.32.0",
+    "reactotron-react-js": "^3.3.8",
+    "reactotron-react-native": "^5.0.3",
+    "typescript": "~4.8.4"
   },
   "private": true
 }
